@@ -1,3 +1,8 @@
+2012-06-05  Stan Shebs  <stan@codesourcery.com>
+
+	* mi/mi-interp.c (mi_interpreter_init): Set raw_stdout from
+	gdb_stdout.
+
 2012-06-05  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
 	* corefile.c (read_memory, read_stack, write_memory): Accept LEN
